--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <div class="backdrop"></div>
             <div class="select">Let's analyze your cough</div>
             <hr>
-            <form id="upload-form" action="{{ url_for('upload_audio') }}" method="POST" enctype="multipart/form-data" onsubmit="handleFormSubmit(event)">
+            <form id="upload-form" enctype="multipart/form-data" onsubmit="handleFormSubmit(event)">
                 <div class="fl">
                     <label for="audio_file" class="selectfile">Select an audio file:</label>
                     <input type="file" id="audio_file" name="audio_file" accept="audio/*" required>
@@ -81,7 +81,7 @@
                 <br><br>
                 <input id="audio-submit" type="submit" value="Upload">
             </form>
-            <div class="result"><p>{{ result|safe }}</p></div>
+            <div id="result"></div>
         </div>
     </div>
     </div>
