--- a/templates/login.html
+++ b/templates/login.html
@@ -34,14 +34,14 @@
             <div class="btn"><input type="submit" value="login"></div>
         </form>
     </div>
-    <div class="section2">
+    <div class="section2" id="section2">
         <div class="background" id="background"></div>
             <div class="disclaimer">
                 <h2>Disclaimer</h2>
-                <p>
+                <p class="clicking">
                     The medical AI tool you are about to use is designed to assist healthcare professionals in making clinical decisions. It is not intended to replace the expertise and judgment of a licensed healthcare provider. The tool provides information and recommendations based on the data provided by the user and the algorithms programmed into the system. While the tool has been designed and tested to provide accurate and reliable information, it is not infallible. There may be errors or omissions in the data used to develop the algorithm or in the way the algorithm is applied to the data. Therefore, the results provided by the tool should be considered as only one factor in the decision-making process. The tool should not be used as a substitute for a complete medical evaluation or consultation with a licensed healthcare provider. Any medical decision should be made in consultation with a qualified healthcare provider who is familiar with the specifics of your individual case. The developers and operators of the tool make no warranties or representations, express or implied, regarding the accuracy, completeness, or reliability of the information provided by the tool. The tool is provided "as is" and without warranty of any kind, either expressed or implied, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose. By using the tool, you acknowledge and accept these limitations and disclaimers, and agree to use the tool solely at your own risk.
                 </p>
-                <p>By clicking "Continue" below, you acknowledge that you have read and understood the above disclaimer, and agree to use the tool solely at your own risk.</p>
+                <p>By clicking <b>"Continue"</b> below, you acknowledge that you have read and understood the above disclaimer, and agree to use the tool solely at your own risk.</p>
                 <div class="checkbox">
                     <input type="checkbox" id="understand">
                     <label for="understand">OK, I understand</label>
